<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_blue"
        android:text="@string/categorie_montant"
        android:textColor="#000000"
        android:textSize="@dimen/text_large" />

    <ListView
        android:id="@+id/income_list"
        style="@style/ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@color/background_color_blue"
        android:gravity="top"
        android:scrollbarStyle="insideOverlay" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="65"
        android:background="@color/background_color_blue"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/income_button_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@drawable/button"
            android:text="@string/modify"
            android:textSize="@dimen/text_small"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/income_button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@drawable/button"
            android:text="@string/add"
            android:textSize="@dimen/text_small"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>