<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*" >

    <TableRow
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:labelFor="@+id/new_category_category_text"
            android:padding="10dp"
            android:text="@string/category"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/new_category_category_text"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:clickable="true"
            android:cursorVisible="true"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="@dimen/text_medium" />
    </TableRow>

    <TableRow
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_category_button_cancel"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_span="3"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/new_category_button_ok"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_span="2"
            android:background="@drawable/button_ok"
            android:layout_marginTop="5dp"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="@dimen/text_medium" />
    </TableRow>

</TableLayout>